--- a/resume.tex
+++ b/resume.tex
@@ -7,46 +7,44 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{Bin Yuan}
+\name{Kai Feng}
 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
+  \email{fengkai@buaa.edu.cn} \textperiodcentered\ 
+  \phone{(+86) 186-1074-0692} \textperiodcentered\ 
+%  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
 
 \section{\faGraduationCap\ Education}
-\datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
-\textit{Master student} in Electronics Engineering (EE), expected March 2016
-\datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
-\textit{B.S.} in Electronics Engineering (EE)
+\datedsubsection{\textbf{BeiHang University(Buaa)}, Beijing, China}{2014 -- Present}
+\textit{Undergraduate student} in Computer Science (CS), expected June 2018
 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{FLAG Inc.} California, America}{2012 -- Present}
-\role{Summer Intern}{Manager: xxx}
-Brief introduction: xxx.
-\begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
-\end{itemize}
+\datedsubsection{\textbf{State Key Laboratory of Software Development Environment} Beijing, China}{Jun. 2016 -- Jun. 2017}
+\role{Student Researcher}{Advisor: Xianglong Liu}
+%Brief introduction: xxx.
+%\begin{itemize}
+%  \item Implemented xxx feature
+%  \item Optimized xxx 5\%
+%  \item xxx
+%\end{itemize}
 
-\datedsubsection{\textbf{xxx Projects}}{Jan. 2015 -- Present}
-\role{C, Python, Django, Linux}{Individual Projects, collaborated with xxx}
-Brief introduction: xxx
-\begin{itemize}
-  \item Implemented xxx feature
-  \item Optimized xxx 5\%
-  \item xxx
-\end{itemize}
+\datedsubsection{\textbf{Institute of software engineering, Beihang University}}{Jun. 2016 -- Present}
+\role{PHP, MySQL, Apache, Python}{Teaching Platform, Supervised by Ji Wu}
+%Brief introduction: xxx
+%\begin{itemize}
+%  \item Implemented xxx feature
+%  \item Optimized xxx 5\%
+%  \item xxx
+%\end{itemize}
 
-\datedsubsection{\textbf{\LaTeX\ résumé template}}{May. 2015 -- Present}
-\role{\LaTeX, Maintainer}{Individual Projects}
-An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
-\begin{itemize}
-  \item Easy to be further customized or extended
-  \item Full support for unicode characters (e.g. CJK) with \XeLaTeX\
-  \item FontAwesome 4.5.0 support
-\end{itemize}
+\datedsubsection{\textbf{}}{Jun. 2017 -- Present}
+\role{Student Resercher}{Advisor: Jingyuan Wang}
+%An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
+%\begin{itemize}
+%  \item Easy to be further customized or extended
+%  \item Full support for unicode characters (e.g. CJK) with \XeLaTeX\
+%  \item FontAwesome 4.5.0 support
+%\end{itemize}
 
 % Reference Test
 %\datedsubsection{\textbf{Paper Title\cite{zaharia2012resilient}}}{May. 2015}
