--- a/resume.tex
+++ b/resume.tex
@@ -37,7 +37,8 @@
 %  \item xxx
 %\end{itemize}
 
-\datedsubsection{\textbf{}}{Jun. 2017 -- Present}
+\datedsubsection{\textbf{Engineering technology research center of Ministry of education for advanced computer BUAA
+}}{Jun. 2017 -- Present}
 \role{Student Resercher}{Advisor: Jingyuan Wang}
 %An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 %\begin{itemize}
