--- a/resume.tex
+++ b/resume.tex
@@ -12,7 +12,8 @@
 \basicInfo{
   \email{fengkai@buaa.edu.cn} \textperiodcentered\ 
   \phone{(+86) 186-1074-0692} \textperiodcentered\ 
-%  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
+%  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}
+}
 
 \section{\faGraduationCap\ Education}
 \datedsubsection{\textbf{BeiHang University(Buaa)}, Beijing, China}{2014 -- Present}
