--- a/resume.tex
+++ b/resume.tex
@@ -29,7 +29,7 @@
 %  \item xxx
 %\end{itemize}
 
-\datedsubsection{\textbf{Institute of software engineering, Beihang University}}{Jun. 2016 -- Present}
+\datedsubsection{\textbf{Institute of software engineering, Beihang University} Beijing, China}{Jun. 2016 -- Present}
 \role{PHP, MySQL, Apache, Python}{Teaching Platform, Supervised by Ji Wu}
 %Brief introduction: xxx
 %\begin{itemize}
@@ -39,7 +39,7 @@
 %\end{itemize}
 
 \datedsubsection{\textbf{Engineering technology research center of Ministry of education for advanced computer BUAA
-}}{Jun. 2017 -- Present}
+} Beijing China}{Jun. 2017 -- Present}
 \role{Student Resercher}{Advisor: Jingyuan Wang}
 %An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 %\begin{itemize}
@@ -57,20 +57,22 @@
 
 \section{\faCogs\ Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item Programming Languages: C == Python > C++ > Java
-  \item Platform: Linux
-  \item Development: Web, xxx
+  \item Programming Languages: Java > Python == C, PHP, SQL, Scala, Verilog HDL
+  \item Platforms: Windows, Linux
+  \item Tools: TensorFlow, Apache Tomcat, Hadoop, Spark
 \end{itemize}
 
 \section{\faHeartO\ Honors and Awards}
-\datedline{\textit{\nth{1} Prize}, Award on xxx }{Jun. 2013}
-\datedline{Other awards}{2015}
+\datedline{\textit{\nth{2} Prize(\%5)}, Excellent freshmen Scholarship}{2014}
+\datedline{\textit{\nth{1} Prize(\%5)}, Scholarship of Academic Excellence for the 2014-2015 academic year}{2015}
+\datedline{\textit{Honorable Mention}, MCM/ICM Contest}{Jan. 2017}
+\datedline{\textit{\nth{2} Prize}, The twenty-seventh Fengru Cup competition}
 
 \section{\faInfo\ Miscellaneous}
 \begin{itemize}[parsep=0.5ex]
-  \item Blog: http://your.blog.me
-  \item GitHub: https://github.com/username
-  \item Languages: English - Fluent, Mandarin - Native speaker
+%  \item Blog: http://your.blog.me
+  \item GitHub: https://github.com/kaikaifeng
+  \item Languages: English - IELTS 6.5, Mandarin - Native speaker
 \end{itemize}
 
 %% Reference
