--- a/resume.tex
+++ b/resume.tex
@@ -17,13 +17,13 @@
 
 \section{\faGraduationCap\ Education}
 \datedsubsection{\textbf{BeiHang University(Buaa)}, Beijing, China}{2014 -- Present}
-\textit{Undergraduate student} in Computer Science (CS), expected June 2018
+\textit{Undergraduate student} in Computer Science (CS), expected June 2018 \par
 \textit{Comprehensive Achievement}: 93 Ranking: 8/226
 \datedsubsection{\textbf{BeiHang University(Buaa)}, Beijing, China}{2015 -- Present}
 \textit{Double degree} in Mathematics, expected June 2018
 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{State Key Laboratory of Software Development Environment} Beijing, China}{Jun. 2016 -- Jun. 2017}
+\datedsubsection{\textbf{State Key Laboratory of Software Development Environment(nlsde)} Beijing, China}{Jun. 2016 -- Jun. 2017}
 \role{Student Researcher}{Advisor: Xianglong Liu}
 %Brief introduction: xxx.
 %\begin{itemize}
@@ -41,7 +41,7 @@
 %  \item xxx
 %\end{itemize}
 
-\datedsubsection{\textbf{Engineering technology research center of Ministry of education for advanced computer BUAA
+\datedsubsection{\textbf{Engineering technology research center of Ministry of education for advanced computer, Beihang University
 } Beijing China}{Jun. 2017 -- Present}
 \role{Student Resercher}{Advisor: Jingyuan Wang}
 %An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
@@ -68,7 +68,7 @@
 \section{\faHeartO\ Honors and Awards}
 \datedline{\textit{\nth{2} Prize(\%5)}, Excellent freshmen Scholarship}{2014}
 \datedline{\textit{\nth{1} Prize(\%5)}, Scholarship of Academic Excellence for the 2014-2015 academic year}{2015}
-\datedline{\textit{\nth{1} Prize(\%3)}, Excellent student of the 2014-2015 academic year}{2015}
+\datedline{\textit{Excellent student of the 2014-2015 academic year(\%3)}}{2015}
 \datedline{\textit{Honorable Mention}, MCM/ICM Contest}{Jan. 2017}
 \datedline{\textit{\nth{2} Prize}, The twenty-seventh Fengru Cup competition}{May. 2017}
 
