--- a/resume.tex
+++ b/resume.tex
@@ -23,7 +23,7 @@
 \textit{Double degree} in Mathematics, expected June 2018
 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{State Key Laboratory of Software Development Environment(nlsde)} Beijing, China}{Jun. 2016 -- Jun. 2017}
+\datedsubsection{\textbf{State Key Laboratory of Software Development Environment(nlsde)} Beijing, China}\par{Jun. 2016 -- Jun. 2017}
 \role{Student Researcher}{Advisor: Xianglong Liu}
 %Brief introduction: xxx.
 %\begin{itemize}
