--- a/resume.tex
+++ b/resume.tex
@@ -23,7 +23,7 @@
 \textit{Double degree} in Mathematics, expected June 2018
 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{State Key Laboratory of Software Development Environment(nlsde)} Beijing, China \qquad\qquad\qquad\qquad\qquad\qquad}{Jun. 2016 -- Jun. 2017}
+\datedsubsection{\textbf{State Key Laboratory of Software Development Environment(nlsde)}}{Jun. 2016 -- Jun. 2017}
 \role{Student Researcher}{Advisor: Xianglong Liu}
 %Brief introduction: xxx.
 %\begin{itemize}
@@ -32,7 +32,7 @@
 %  \item xxx
 %\end{itemize}
 
-\datedsubsection{\textbf{Institute of software engineering, Beihang University} Beijing, China}{Jun. 2016 -- Present}
+\datedsubsection{\textbf{Institute of software engineering, Beihang University}}{Jun. 2016 -- Present}
 \role{PHP, MySQL, Apache, Python}{Teaching Platform, Supervised by Ji Wu}
 %Brief introduction: xxx
 %\begin{itemize}
@@ -42,7 +42,7 @@
 %\end{itemize}
 
 \datedsubsection{\textbf{Engineering technology research center of Ministry of education for advanced computer, Beihang University
-} Beijing China}{Jun. 2017 -- Present}
+}}{Jun. 2017 -- Present}
 \role{Student Resercher}{Advisor: Jingyuan Wang}
 %An elegant \LaTeX\ résumé template, https://github.com/billryan/resume
 %\begin{itemize}
