--- a/resume.tex
+++ b/resume.tex
@@ -65,6 +65,8 @@
   \item Tools: TensorFlow, Apache Tomcat, Hadoop, Spark
 \end{itemize}
 
+\section{\faFloder\ Publication}
+
 \section{\faHeartO\ Honors and Awards}
 \datedline{\textit{\nth{2} Prize(\%5)}, Excellent freshmen Scholarship}{2014}
 \datedline{\textit{\nth{1} Prize(\%5)}, Scholarship of Academic Excellence for the 2014-2015 academic year}{2015}
