--- a/resume.tex
+++ b/resume.tex
@@ -65,7 +65,8 @@
   \item Tools: TensorFlow, Apache Tomcat, Hadoop, Spark
 \end{itemize}
 
-\section{\faFloder\ Publication}
+\section{\faFolder\ Publication}
+"An early warning model of student achievement based on Decision Trees algorithm", IEEE International Conference on Teaching, Assessment and Learning for Engineering, 2017（under evaluating）
 
 \section{\faHeartO\ Honors and Awards}
 \datedline{\textit{\nth{2} Prize(\%5)}, Excellent freshmen Scholarship}{2014}
