--- a/resume.tex
+++ b/resume.tex
@@ -19,11 +19,11 @@
 \datedsubsection{\textbf{BeiHang University(Buaa)}, Beijing, China}{2014 -- Present}
 \textit{Undergraduate student} in Computer Science (CS), expected June 2018 \par
 \textit{GPA}:
-\begin{itemsize}
+\begin{itemize}
   \item FIRST YEAR: 90 
   \item SECOND YEAR: 87
   \item THIRD YEAR: 92
-\end{itemsize}
+\end{itemize}
 \textit{Comprehensive Achievement}: 93 Ranking: 8/226
 \datedsubsection{\textbf{BeiHang University(Buaa)}, Beijing, China}{2015 -- Present}
 \textit{Double degree} in Mathematics, expected June 2018
