--- a/resume.tex
+++ b/resume.tex
@@ -29,7 +29,7 @@
 \textit{Double degree} in Mathematics, expected June 2018
 
 \section{\faUsers\ Experience}
-\datedsubsection{\textbf{State Key Laboratory of Software Development Environment(nlsde)}}{Jun. 2016 -- Jun. 2017}
+\datedsubsection{\textbf{State Key Laboratory of Software Development Environment (nlsde)}}{Jun. 2016 -- Jun. 2017}
 \role{Student Researcher}{Advisor: Xianglong Liu}
 %Brief introduction: xxx.
 %\begin{itemize}
@@ -86,6 +86,7 @@
 %  \item Blog: http://your.blog.me
   \item GitHub: https://github.com/kaikaifeng
   \item Languages: English - IELTS 6.5, Mandarin - Native speaker
+  \item Data Structures and Algorithms teaching volunteer: 32 hours volunteer time (certified by Beijing Volunteer Service Federation (BVF))
 \end{itemize}
 
 %% Reference
