--- a/resume.tex
+++ b/resume.tex
@@ -66,7 +66,7 @@
 
 \section{\faCogs\ Skills}
 \begin{itemize}[parsep=0.5ex]
-  \item Programming Languages: Java > Python == C, PHP, SQL, Scala, Verilog HDL
+  \item Programming Languages: Java > Python == C; PHP, SQL, Scala, Verilog HDL
   \item Platforms: Windows, Linux
   \item Tools: TensorFlow, Apache Tomcat, Hadoop, Spark
 \end{itemize}
